--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Organizers from '../components/Organizers';
   </footer>
 
   <a href="https://wa.me/3004201706?text=Hola,%20quiero%20participar%20en%20el%20torneo" class="participate-btn-floating" target="_blank" rel="noopener noreferrer">
-    🎮 Participa
+    <img src="/images/whatsapp.png" alt="WhatsApp" class="whatsapp-icon"> Participa
   </a>
 </Layout>
 
