--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Torneo Rocket League Rojudasa Championship" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/copa.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>RL ROJUDASA - {title}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
