--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import UpcomingMatches from '../components/UpcomingMatches';
 <Layout title="Ligas y Copas Competitivas">
   <Navigation client:load />
   <Hero client:load />
-  <UpcomingMatches client:load />
+  <UpcomingMatches client:visible />
 
   <section class="social-section">
     <div class="container">
