--- a/src/pages/informacion.astro
+++ b/src/pages/informacion.astro
@@ -8,9 +8,9 @@ import MapSection from '../components/MapSection';
 
 <Layout title="Información">
   <Navigation client:load />
-  <TournamentInfo client:load />
-  <Rules client:load />
-  <MapSection client:load />
+  <TournamentInfo client:visible />
+  <Rules client:visible />
+  <MapSection client:visible />
   
   <footer class="footer">
     <div class="container">
