Calendario, creacion, edicion y registro de partidos de liga

--- a/src/pages/liga.astro
+++ b/src/pages/liga.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navigation from '../components/Navigation';
-import LeagueTable from '../components/LeagueTable';
+import LeaguePage from '../components/LeaguePage';
 ---
 
 <Layout title="Liga - RL ROJUDASA">
   <Navigation client:load />
-  <LeagueTable client:load />
+  <LeaguePage client:load />
   
   <footer class="footer">
     <div class="container">
